finished both the html and css for the technical documentations example

--- a/documentation_page/documentation_page.html
+++ b/documentation_page/documentation_page.html
@@ -10,18 +10,18 @@
             <nav id="navbar">
                 <header>Introduction to Python</header>
                 <ul>
-                    <li><a href="#beginner" class="nav-link">Beginners Guide to Python</a></li>
-                    <li><a href="#git" class="nav-link">Getting started</a></li>
-                    <li><a href="#tests" class="nav-link">Basic Python Code</a></li>
-                    <li><a href="#datatypes" class="nav-link">Data Types</a></li>
-                    <li><a href="#datastructures" class="nav-link">Data Structures</a></li>
+                    <li><a href="#Beginners_Guide_to_Python" class="nav-link">Beginners Guide to Python</a></li>
+                    <li><a href="#Getting_Started" class="nav-link">Getting started</a></li>
+                    <li><a href="#Basic_Python_Code" class="nav-link">Basic Python Code</a></li>
+                    <li><a href="#Data_Types" class="nav-link">Data Types</a></li>
+                    <li><a href="#Data_Structures" class="nav-link">Data Structures</a></li>
                 </ul>
             </nav>
         </div>  
         <main id="main-doc">
             
-            <section class="main-section">
-                <header class="sectionheader"><a id="beginner" name="beginner" id="Beginners_Guide_to_Python">Beginners Guide to Python</a></header>
+            <section class="main-section" id="Beginners_Guide_to_Python">
+                <header class="sectionheader"><a id="beginner" name="beginner" >Beginners Guide to Python</a></header>
                 <p class="paratext">
                     Some of the text for this page was taken from <a href="https://wiki.python.org/moin/BeginnersGuide/Overview">here</a>.
                     Python is a clear and powerful object-oriented programming language, comparable to Perl, Ruby, Scheme, or Java.
@@ -60,8 +60,8 @@
                     </ul>
                 </p>
             </section>
-            <section class="main-section">
-                <header class="sectionheader"><a id="git" name="git" id="Getting_Startead">Getting Started</a></header>
+            <section class="main-section" id="Getting_Started" >
+                <header class="sectionheader"><a name="started" >Getting Started</a></header>
                 <p class="paratext">
                     <ul>
                         <li><p>Download Python! Find the latest version <a href="http://python.org/download/">here</a></p></li>
@@ -92,8 +92,8 @@
                     </ul>
                 </p>
             </section>
-            <section class="main-section">
-                <header class="sectionheader"><a id="basic" name="basic" id="Basic_Python_Code"></a>Basic Python Code</header>
+            <section class="main-section" id="Basic_Python_Code">
+                <header class="sectionheader"><a id="basic" name="basic"></a>Basic Python Code</header>
                 <p class="paratext">
                     <div id="codetext">
                         <ul class="codelist">
@@ -171,14 +171,14 @@
 
                 </p>
             </section>
-            <section class="main-section">
-                <header class="sectionheader"><a id="datatypes" name="datatypes" id="Data_Types">Data Types</a></header>
+            <section class="main-section" id="Data_Types">
+                <header class="sectionheader"><a id="datatypes" name="datatypes" >Data Types</a></header>
                 <p class="paratext">
                     <p>There are several data types built into Python</p>
                     <ul>
                         <li>Text Type: str (string)</li>
                         <li>Numeric Types: int (integer), float, complex</li>
-                        <li>Sequence Types or data structures <a href="#datastructures" class="nav-link">(see below)</a>: list, tuple, range</li>
+                        <li>Sequence Types or data structures <a href="#datastructures">(see below)</a>: list, tuple, range</li>
                         <li>Mapping Type: dict (dictionary)</li>
                         <li>Set Types: set, frozenset</li>
                         <li>Boolean Type: bool</li>
@@ -186,8 +186,8 @@
                     </ul>
                 </p>
             </section>
-            <section class="main-section">
-                <header class="sectionheader"><a id="datastructures" name="datastructures" id="Data_Structures">Data Structures</a></header>
+            <section class="main-section" id="Data_Structures">
+                <header class="sectionheader"><a id="datastructures" name="datastructures" >Data Structures</a></header>
                 <p class="paratext">
                     <ul>
                         <li>
@@ -255,5 +255,6 @@
                 </p>
             </section> -->
         </main>
+        <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     </body>
 </html>
